--- a/app/views/ui/home.html.haml
+++ b/app/views/ui/home.html.haml
@@ -4,7 +4,7 @@
   .videos.row
     - @videos.last(100).each do |video|
       .video.col-sm-2
-        = link_to "", nil do
+        = link_to video_path(video.id) do
           %img(src="#{video.small_cover_url}")
     / - 6.times do
     /   .video.col-sm-2
